user account - view - add an 'if' to show animals + fix alignement issue for user infortmation

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -6,4 +6,9 @@
 
 .info-user {
   align-items: center; 
+  margin-bottom: 0;
+}
+
+.input-group-text {
+  justify-content: center;
 }
